@@ -49,7 +49,6 @@ table {
   --base-font-family: var(--sansserif-font-family);
   --base-background-color: var(--white, white);
   --base-color: var(--black, black);
-  --default-link-color: var(--blue, blue);
   --default-border-width: 1px;
   --default-border-color: currentColor;
   --default-bold-font-weight: bold;
@@ -57,7 +56,6 @@ table {
   --font-family: var(--base-font-family);
   --background-color: var(--base-background-color);
   --color: var(--base-color);
-  --link-color: var(--default-link-color);
   --border-width: var(--default-border-width);
   --border-color: var(--default-border-color);
   --bold-font-weight: var(--default-bold-font-weight);
