@@ -2,6 +2,7 @@
 
   * (background) add .bg-current
   * (color) add .color-current
+  * (variables) remove --link-color
 
 # 0.13.1 (2020-11-09)
 
